// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should clear 1`] = `
<div>
  <button
    className="search-navigator-facet-header-button button-small button-red"
    onClick={[Function]}
  >
    clear
  </button>
  <a
    className="search-navigator-facet-header"
    href="#"
    onClick={[Function]}
  >
    <svg
      height="10"
      style={
        Object {
          "paddingTop": 3,
        }
      }
      viewBox="0 0 1792 1792"
      width="10"
    >
      <path
        d="M1363 877l-742 742q-19 19-45 19t-45-19l-166-166q-19-19-19-45t19-45l531-531-531-531q-19-19-19-45t19-45l166-166q19-19 45-19t45 19l742 742q19 19 19 45t-19 45z"
        style={
          Object {
            "fill": "currentColor ",
          }
        }
      />
    </svg>
     
    foo
     
    <span
      className="spacer-left badge is-rounded"
    >
      3
    </span>
  </a>
</div>
`;

exports[`should render closed facet with value 1`] = `
<div>
  <a
    className="search-navigator-facet-header"
    href="#"
    onClick={[Function]}
  >
    <svg
      height="10"
      style={
        Object {
          "paddingTop": 3,
        }
      }
      viewBox="0 0 1792 1792"
      width="10"
    >
      <path
        d="M1363 877l-742 742q-19 19-45 19t-45-19l-166-166q-19-19-19-45t19-45l531-531-531-531q-19-19-19-45t19-45l166-166q19-19 45-19t45 19l742 742q19 19 19 45t-19 45z"
        style={
          Object {
            "fill": "currentColor ",
          }
        }
      />
    </svg>
     
    foo
     
    <span
      className="spacer-left badge is-rounded"
    >
      1
    </span>
  </a>
</div>
`;

exports[`should render closed facet without value 1`] = `
<div>
  <a
    className="search-navigator-facet-header"
    href="#"
    onClick={[Function]}
  >
    <svg
      height="10"
      style={
        Object {
          "paddingTop": 3,
        }
      }
      viewBox="0 0 1792 1792"
      width="10"
    >
      <path
        d="M1363 877l-742 742q-19 19-45 19t-45-19l-166-166q-19-19-19-45t19-45l531-531-531-531q-19-19-19-45t19-45l166-166q19-19 45-19t45 19l742 742q19 19 19 45t-19 45z"
        style={
          Object {
            "fill": "currentColor ",
          }
        }
      />
    </svg>
     
    foo
     
  </a>
</div>
`;

exports[`should render open facet with value 1`] = `
<div>
  <a
    className="search-navigator-facet-header"
    href="#"
    onClick={[Function]}
  >
    <svg
      height="10"
      style={
        Object {
          "paddingTop": 3,
        }
      }
      viewBox="0 0 1792 1792"
      width="10"
    >
      <path
        d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
        style={
          Object {
            "fill": "currentColor ",
          }
        }
      />
    </svg>
     
    foo
     
  </a>
</div>
`;

exports[`should render open facet without value 1`] = `
<div>
  <a
    className="search-navigator-facet-header"
    href="#"
    onClick={[Function]}
  >
    <svg
      height="10"
      style={
        Object {
          "paddingTop": 3,
        }
      }
      viewBox="0 0 1792 1792"
      width="10"
    >
      <path
        d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
        style={
          Object {
            "fill": "currentColor ",
          }
        }
      />
    </svg>
     
    foo
     
  </a>
</div>
`;

exports[`should render without link 1`] = `
<div>
  <span
    className="search-navigator-facet-header"
  >
    foo
  </span>
</div>
`;
